refactor(properties): property v2 Discord Google Slack Opsgenie PagerDuty Sendgrid Sentry Teams Telegram Whatsapp Zenduty