@@ -1,19 +1,18 @@
 package io.kestra.plugin.notifications.whatsapp;
 
-import io.kestra.core.models.annotations.PluginProperty;
+import io.kestra.core.models.property.Property;
 import io.kestra.core.models.tasks.VoidOutput;
 import io.kestra.core.runners.RunContext;
 import io.kestra.core.serializers.JacksonMapper;
-import io.kestra.core.utils.Rethrow;
 import io.swagger.v3.oas.annotations.media.Schema;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.ToString;
 import lombok.experimental.SuperBuilder;
-import org.apache.commons.io.Charsets;
 import org.apache.commons.io.IOUtils;
 
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -32,86 +31,86 @@ public abstract class WhatsAppTemplate extends WhatsAppIncomingWebhook {
         title = "Template to use",
         hidden = true
     )
-    @PluginProperty(dynamic = true)
-    protected String templateUri;
+    protected Property<String> templateUri;
 
     @Schema(
         title = "Map of variables to use for the message template"
     )
-    @PluginProperty(dynamic = true)
-    protected Map<String, Object> templateRenderMap;
+    protected Property<Map<String, Object>> templateRenderMap;
 
     @Schema(
         title = "Sender profile name"
     )
-    @PluginProperty(dynamic = true)
-    protected String profileName;
+    protected Property<String> profileName;
 
     @Schema(
         title = "The WhatsApp ID of the contact"
     )
-    @PluginProperty
-    protected List<String> whatsAppIds;
+    protected Property<List<String>> whatsAppIds;
 
     @Schema(
         title = "WhatsApp ID of the sender (Phone number)"
     )
-    @PluginProperty(dynamic = true)
-    protected String from;
+    protected Property<String> from;
 
     @Schema(
         title = "Message id"
     )
-    @PluginProperty(dynamic = true)
-    protected String messageId;
+    protected Property<String> messageId;
 
     @Schema(
         title = "Message"
     )
-    @PluginProperty(dynamic = true)
-    protected String textBody;
+    protected Property<String> textBody;
 
 
     @Schema(
         title = "WhatsApp recipient ID"
     )
-    @PluginProperty(dynamic = true)
-    protected String recipientId;
+    protected Property<String> recipientId;
 
     @SuppressWarnings("unchecked")
     @Override
     public VoidOutput run(RunContext runContext) throws Exception {
         Map<String, Object> map = new HashMap<>();
 
-        if (this.templateUri != null) {
+        final var renderedTemplateUri = runContext.render(this.templateUri).as(String.class);
+        if (renderedTemplateUri.isPresent()) {
             String template = IOUtils.toString(
-                Objects.requireNonNull(this.getClass().getClassLoader().getResourceAsStream(this.templateUri)),
-                Charsets.UTF_8
+                Objects.requireNonNull(this.getClass().getClassLoader().getResourceAsStream(renderedTemplateUri.get())),
+                StandardCharsets.UTF_8
             );
 
-            String render = runContext.render(template, templateRenderMap != null ? templateRenderMap : Map.of());
+            String render = runContext.render(template, templateRenderMap != null ?
+                runContext.render(templateRenderMap).asMap(String.class, Object.class) :
+                Map.of()
+            );
             map = (Map<String, Object>) JacksonMapper.ofJson().readValue(render, Object.class);
         }
 
-        if (this.profileName != null && this.whatsAppIds != null && !this.whatsAppIds.isEmpty()) {
-            List<Map<String, Object>> profiles = this.whatsAppIds.stream()
-                .map(throwFunction(WhatsAppId -> Map.of("profile", Map.of("name", runContext.render(this.profileName)), "wa_id", WhatsAppId)))
+        final var renderedProfileName = runContext.render(this.profileName).as(String.class);
+        final var renderedWhatsAppIds = runContext.render(this.whatsAppIds).asList(String.class);
+        if (renderedProfileName.isPresent() && !renderedWhatsAppIds.isEmpty()) {
+            List<Map<String, Object>> profiles = renderedWhatsAppIds.stream()
+                .map(throwFunction(WhatsAppId -> Map.of(
+                    "profile", Map.of("name", renderedProfileName.get()),
+                    "wa_id", WhatsAppId)))
                 .toList();
 
             map.put("contacts", profiles);
         }
 
-        if (this.from != null) {
-            Map<String, Object> message = new HashMap<>(Map.of("from", runContext.render(this.from)));
+        final var renderedFrom = runContext.render(this.from).as(String.class);
+        if (renderedFrom.isPresent()) {
+            Map<String, Object> message = new HashMap<>(Map.of("from", renderedFrom.get()));
 
-            if (messageId != null) {
-                message.put("id", runContext.render(this.messageId));
-            }
+            runContext.render(this.messageId).as(String.class).ifPresent(id -> message.put("id", id));
 
-            if (textBody != null) {
-                message.put("text", Map.of("body", runContext.render(this.textBody)));
+
+            if (runContext.render(this.textBody).as(String.class).isPresent()) {
+                message.put("text", Map.of("body", runContext.render(this.textBody).as(String.class).get()));
             } else {
-                message.put("text", ((List<Map<String, Object>>)map.get("messages")).get(0).getOrDefault("text", ""));
+                message.put("text", ((List<Map<String, Object>>)map.get("messages")).getFirst().getOrDefault("text", ""));
             }
 
             message.put("type", "text");
@@ -119,11 +118,11 @@ public abstract class WhatsAppTemplate extends WhatsAppIncomingWebhook {
             map.put("messages", List.of(message));
         }
 
-        if (recipientId != null) {
-            map.put("recipient_id", runContext.render(recipientId));
+        if (runContext.render(recipientId).as(String.class).isPresent()) {
+            map.put("recipient_id", runContext.render(recipientId).as(String.class).get());
         }
 
-        this.payload = JacksonMapper.ofJson().writeValueAsString(map);
+        this.payload = Property.of(JacksonMapper.ofJson().writeValueAsString(map));
 
         return super.run(runContext);
     }
